version 0.1.1, add UseCGroupMemoryLimitForHeap setting for container command